--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="container1">
         <div class="box1">
             <div class="logo">
-                <img src="/imagenes/logotec.png" alt="logo">
+                <img src="imagenes/logotec.png" alt="logo">
             </div>
             <div class="redes">
-                <a href="#" target="_blank"><img src="/imagenes/icono_facebook.jpg" alt="facebook"></a>
-               <a href="#" target="_blank"><img src="/imagenes/icono_instagram.jpg" alt="intagram"></a> 
-                <a href="#" target="_blank"><img src="/imagenes/icono_twitter.jpg" alt="twitter"></a>
+                <a href="#" target="_blank"><img src="imagenes/icono_facebook.jpg" alt="facebook"></a>
+               <a href="#" target="_blank"><img src="imagenes/icono_instagram.jpg" alt="intagram"></a> 
+                <a href="#" target="_blank"><img src="imagenes/icono_twitter.jpg" alt="twitter"></a>
             </div>
         </div>
 
@@ -39,7 +39,7 @@
 
         <div class="box4">
             <div class="imagen1">
-                <img src="/imagenes/tec_fachada.jpg" alt="fachada">
+                <img src="imagenes/tec_fachada.jpg" alt="fachada">
             </div>
             <div class="text">
                 <h3 class="tec1">Instituto Tecnologico de Merida</h3>
@@ -54,13 +54,13 @@
                 <h2>Ubicanos en Campus Poniente</h2>
             </div>
             <div class="ubicacion">
-                <img src="/imagenes/ubicacion.jpg" alt="">
+                <img src="imagenes/ubicacion.jpg" alt="">
             </div>
         </div>
 
         <div class="box6">
             <div class="logo2">
-                <img class="picture2" src="/imagenes/tec_transparente.png" alt="logo">
+                <img class="picture2" src="imagenes/tec_transparente.png" alt="logo">
             </div>
 
             <div class="text2">
